--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
 
   web:
     container_name: web
-    build: ./web
+    build:
+      context: ./web
+      target: base
     ports:
       - 3011:3000
     environment:
